--- a/PetVet MVC.csproj
+++ b/PetVet MVC.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>PetVet_MVC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
+  </ItemGroup>
+
 </Project>
